--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,15 +2,14 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      java: corretto11
+      - yarn install
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
   build:
     commands:
       - echo Build started on `date`
-      - yarn install
+      #- yarn install
   post_build:
     commands:
       - echo Build completed on `date`
