--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,14 +2,14 @@ version: 0.2
 
 phases:
   install:
-      - yarn install
+    runtime-versions:
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
   build:
     commands:
       - echo Build started on `date`
-      #- yarn install
+      - yarn install
   post_build:
     commands:
       - echo Build completed on `date`
