--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/JonasPihlaja/DevOpsCourseProject#readme",
   "dependencies": {
     "@slack/bolt": "^3.7.0",
+    "express": "^4.17.1",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
