--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/JonasPihlaja/DevOpsCourseProject#readme",
   "dependencies": {
     "@slack/bolt": "^3.7.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "request": "^2.88.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
