--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/JonasPihlaja/DevOpsCourseProject#readme",
   "dependencies": {
     "@slack/bolt": "^3.7.0",
+    "@slack/events-api": "^3.0.1",
+    "axios": "^0.23.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "request": "^2.88.2",
+    "slackbots": "^1.2.0",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
